[tool.poetry]
name = "citc"
version = "0.3.10"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20"
PyYaml = "^6.0"
oci = "^2.54.0"
tabulate = "^0.8"
google-api-python-client = "^2.35.0"
google-auth-oauthlib = "^0.4.6"
boto3-stubs = {version = "^1.20", extras = ["ec2", "route53"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-mock = "^3.6"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"
types_PyYAML = "^6.0"
types_tabulate = "^0.8"
flake8 = "^4.0"
moto = "^2.0"
coverage = "^6.2"
mebula = {version = "^0.2.9", allow-prereleases = true, extras = ["azure", "google", "oracle"]}

[tool.poetry.scripts]
watchdog = 'citc.watchdog:main'
list_nodes = 'citc.list_nodes:main'

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
