[tool.poetry]
name = "citc"
version = "0.3.10"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYaml = "^6.0"
tabulate = "^0.8"
boto3 = {version = "^1.20", optional = true }
oci = {version = "^2.54.0", optional = true }
google-api-python-client = {version = "^2.35.0", optional = true }
google-auth-oauthlib = {version = "^0.4.6", optional = true }
boto3-stubs = {version = "^1.20", extras = ["ec2", "route53"], optional = true }

[tool.poetry.extras]
aws = ["boto3", "boto3-stubs"]
azure = []
google = ["google-api-python-client", "google-auth-oauthlib"]
oracle = ["oci"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-mock = "^3.6"
pyfakefs = "^4.5"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"
types_PyYAML = "^6.0"
types_tabulate = "^0.8"
flake8 = "^4.0"
moto = "^2.0"
coverage = "^6.2"
mebula = {version = "^0.2.9", allow-prereleases = true, extras = ["azure", "google", "oracle"]}

[tool.poetry.scripts]
watchdog = 'citc.watchdog:main'
list_nodes = 'citc.list_nodes:main'

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
