[tool.poetry]
name = "citc"
version = "0.3.12"
description = ""
authors = ["Matt Williams <matt@milliams.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
PyYaml = "^6.0"
tabulate = "^0.9"
boto3 = {version = "^1.28", optional = true }
oci = {version = "^2.105.0", optional = true }
google-api-python-client = {version = "^2.92.0", optional = true }
google-auth-oauthlib = {version = "^0.8", optional = true }
boto3-stubs = {version = "^1.28", extras = ["ec2", "route53"], optional = true }
openstacksdk = {version = "^1.4.0", optional = true }

[tool.poetry.extras]
aws = ["boto3", "boto3-stubs"]
azure = []
google = ["google-api-python-client", "google-auth-oauthlib"]
oracle = ["oci"]
openstack = ["openstacksdk"]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-mock = "^3.11"
pyfakefs = "^5.2"
black = {version = "^23.3"}
mypy = "^1.4.1"
types_PyYAML = "^6.0"
types_tabulate = "^0.9"
flake8 = "^6.0"
moto = "^4.0"
coverage = "^7.0"
mebula = {version = "^0.2.9", allow-prereleases = true, extras = ["azure", "google", "oracle"]}

[tool.poetry.scripts]
watchdog = 'citc.watchdog:main'
list_nodes = 'citc.list_nodes:main'

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
